Forgot Password.html

--- a/Forgot Password.html
+++ b/Forgot Password.html
@@ -9,6 +9,7 @@
             <label for="email">Enter Your Email:</label>
             <input type="email" id="email" placeholder="abc@xyz.com" name="email" required>
             <br><br>
+            <label for="email">Enter OTP:</label>
                      <input type="number" placeholder="enter below number/otp" required><br><br>
             <table border="1">
                 <tr>
